	* regression/Makefile: Add V variable.

Sun Jul 10 14:12:34 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* input.c (inputInit): Remove.
	* input.h: Likewise.
	* asm.c (ASM_Assemble): Call FS_PushFilePObject instead of inputInit.
	* include.c (incDirCurSize, incDirMaxSize): Make type unsigned.

===============================================================================

Sun Jul 10 16:49:00 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* local.c (c_rout): When label is supplied, it should be defined as
	global label just like any others.
	* regression/tests_pass/local_label.s: Enhance ROUT test.

Sat Jun 25 17:57:13 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/rotator.s: Added.
	* get.c (getRhs): Support symbol as value type for rotator value.
	* m_cpuctrl.c (m_msr): Add fixme.
	* symbol.h: Comment update.
	* symbol.c (SymbolCompare): Remove comment.

Tue Jun 14 02:12:06 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (NeedToOutputSymbol): When we having a global keep, don't
	output the register symbols.
	(symbolFix,symbolStringOutput, symbolSymbolAOFOutput,
	symbolSymbolELFOutput): Refactored code into...
	(SymbolCompare, Symbol_CreateSymbolOut, Symbol_OutputStrings,
	Symbol_OutputForAOF, Symbol_OutputForELF, Symbol_FreeSymbolOut,
	SymbolOut_t): ...this. Now outputing local symbols first and order them
	alphabetically.
	(symFlag): Don't give error when no symbol can be read.
	(c_keep): Fix return value check of symFlag call.
	(c_import): Give error when no symbol can be read.
	* symbol.h (symbolFix,symbolStringOutput, symbolSymbolAOFOutput,
	symbolSymbolELFOutput): Remove.
	(SymbolCompare, Symbol_CreateSymbolOut, Symbol_OutputStrings,
	Symbol_OutputForAOF, Symbol_OutputForELF, Symbol_FreeSymbolOut,
	SymbolOut_t): Add.
	* output.c (outputAof, outputElf): Use new Symbol_* code.
	(outputElf): Add preprocessor test on ELF_EABI for EABI v5 output.
	* elf.h: Remove non-ARM bits.  Update ARM relocation list.