@@ -1,0 +1,7 @@
+	; Don't complain about AREA ABS difference.
+	AREA Code, CODE
+	ORG &100
+	AREA Code, CODE
+
+	END
+
